--- a/index.html
+++ b/index.html
@@ -4,9 +4,157 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flexbox-grid William/Ida</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="wrapper">
+    <article class="top-block">
+        <section class="left-side">
+            <h1>We´ve got you Covered.</h1>
+            <p>Together we keep each other safe at home or at work. By 
+                paying a tiny fee a day, you are fully insured all day 
+                long. You get it all for as little as 
+                <span>$0.4 per pay.</span></p>
+            <button class="join-button">Join now</button>
+            <img src="img/family.png" alt="family">
+        </section>
+        <article class="right-side">
+            <section class="top-right-side">
+                <p>What do we have to offer?</p>
+                <h2>Learn more</h2>
+            </section>
+            <section class="bot-right-side">
+                <p>What are you waiting for?</p>
+                <h2>Join today</h2>
+            </section>
+        </article>
+       
+    </article>
+    <nav class="navbar">
+        <ul>
+            <li class="link-one"><a href="#">Home</a></li>
+            <li class="link-two"><a href="#">Our offer</a></li>
+            <li class="link-three"><a href="#">Why us</a></li>
+            <li  class="link-four"><a href="contactform.html">Contact</a></li>
+        </ul>
+    </nav>
+    <article class="main">
+        <section class="header-block">
+            <section class="head-left">
+                <h1>Your personal financial safety net online.</h1>
+                <button class="join-button">Join now</button>
+            </section>
+            <section class="head-right">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Ut tempor ligula vel felis cursus egestas. 
+                Etiam consectetur finibus facilisis. Proin 
+                accumsan auctor purus, quis finibus tellus 
+                accumsan id. Quisque tellus elit, ullamcorper 
+                sed mollis ac, interdum vel enim. Pellentesque 
+                congue felis eget lorem tempor blandit. Mauris 
+                hendrerit ullamcorper ex quis congue donec vel 
+                finibus libero.</p>
+            </section>
+        </section>
+        <article class="card-row">
+            <section class="small-card one">
+                <header class="header blue">
+                    <img src="/img/child.png" alt="">
+                </header>
+                <footer class="card-text">
+                <h3>Children</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur 
+                    adipiscing elit. Ut tempor ligula vel felis 
+                    cursus egestas. Etiam consectetur finibus 
+                    facilisis. Proin accumsan auctor purus, 
+                    quis finibus tellus accumsan id.</p>
+                </footer>
+            </section>
+            <section class="small-card two">
+                <header class="header orange">
+                    <img src="/img/adult.png" alt="">
+                </header>
+                <footer class="card-text">
+                <h3>Just right</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur 
+                    adipiscing elit. Ut tempor ligula vel felis 
+                    cursus egestas. Etiam consectetur finibus 
+                    facilisis. Proin accumsan auctor purus, 
+                    quis finibus tellus accumsan id.</p>
+                </footer>
+            </section>
+            <section class="small-card three">
+                <header class="header red">
+                    <img src="/img/old.png" alt="">
+                </header>
+                <footer class="card-text">
+                <h3>Old fart</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor ligula vel felis 
+                    cursus egestas. Etiam consectetur finibus facilisis. Proin accumsan auctor purus, 
+                    quis finibus tellus accumsan id.</p>
+                </footer>
+            </section>
+        </article>
+        <section class="footer-block">
+            <h1>About us</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ac ultricies massa. 
+                Donec id malesuada magna. Pellentesque aliquet libero erat, fermentum commodo 
+                sapien congue ac. Integer a elit lorem. Vestibulum id venenatis diam, et eleifend 
+                augue. Curabitur ex tortor, auctor lobortis augue at, euismod bibendum neque. Aenean 
+                ullamcorper nibh vitae orci laoreet, eu dictum nisi ultrices. Sed condimentum nibh 
+                neque, at ultricies augue facilisis non.</p>
+
+                <p>Pellentesque a tellus mauris. Nam sodales pretium rutrum. Aenean imperdiet, leo nec 
+                consectetur blandit, risus erat commodo tortor, sit amet dignissim orci lorem vel 
+                felis. Ut tempus dignissim.</p>
+        </section>
+    </article>
+
+    <article class="how-it-works-blocks">
+        <section class="block-one">
+            <h2>How It works?</h2>
+        </section>
+        <section class="block-two">
+            <aside>
+                <h4>01</h4>
+            </aside>
+            <p>Answer a few questions about yourself</p>
+        </section>
+        <section class="block-three">
+            <aside>
+                <h4>02</h4>
+            </aside>
+            <p>Choose a plan. <br>Get a quote.</p>
+        </section>
+        <section class="block-four">
+            <aside>
+                <h4>03</h4>
+            </aside>
+            <p>Answer some questions about your medical history.</p>
+        </section>
+        <section class="block-five">
+            <aside>
+                <h4>04</h4>
+            </aside>
+            <p>Wait 90 sec to get approved.</p>
+        </section>
+        <section class="block-six">
+            <aside>
+                <h4>06</h4>
+            </aside>
+            <p>Done!</p>
+        </section>
+    </article>
+<footer>
+
+    <button class="button-up">
+        <span class="iconify" data-icon="mdi:chevron-up"></span>
+        <p>Take me up again</p>
+    </button>
+</footer>
+
+
+</div>  
 </body>
 </html>
