--- a/index.html
+++ b/index.html
@@ -150,11 +150,14 @@
 
     <button class="button-up">
         <span class="iconify" data-icon="mdi:chevron-up"></span>
-        <p>Take me up again</p>
+        <p>Take me up again!</p>
     </button>
+
+    <section class="floor"></section>
 </footer>
 
 
 </div>  
+<script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
 </body>
 </html>
