--- a/contactform.html
+++ b/contactform.html
@@ -4,9 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Flexbox-grid William/Ida</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="wrapper">
+        <section class="top-block heading">
+            <article class="left-side">
+                    <h2>Oh hello there!</h2>
+                    <img src="img/man-and-child.png" alt="man and child">
+            </article>
+        </section>
+        <nav class="navbar navbar-type-2">
+            <ul>
+                <li class="link-one">  <a href="index.html">Home</a></li>
+                <li class="link-two">  <a href="#">Our offer</a></li>
+                <li class="link-three"><a href="#">Why us</a></li>
+                <li  class="link-four"><a class="current-page" href="contactform.html">Contact</a></li>
+            </ul>
+        </nav>
+        <article class="contact-block">
+            <section class="left-side">
+                <h2>Whats on your mind?</h2>
+            </section>
+            <section class="right-side">
+                <p>Your email</p>
+                <input type="text">
+                <p>Your message</p>
+                <textarea class="message" placeholder="Dear Insurance company..."></textarea>
+                <button class="join-button">SEND MESSAGE</button>
+            </section>
+        </article>
+        <footer>
+            <section class="img-background">
+                <section class="text-field">
+                    <h2>Come visit us!</h2>
+                    <p>2219 Griffin Street</p>
+                    <p>San Fransisco</p>
+                </section>
+                <img src="img/needle.png" alt="map needle">
+            </section>
+            
+            <section class="floor"></section>
+        </footer>
+    </div>  
+<script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
 </body>
 </html>
+
