--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </article>
     <nav class="navbar">
         <ul>
-            <li class="link-one"><a href="#">Home</a></li>
+            <li class="link-one"><a class="current-page" href="#">Home</a></li>
             <li class="link-two"><a href="#">Our offer</a></li>
             <li class="link-three"><a href="#">Why us</a></li>
             <li  class="link-four"><a href="contactform.html">Contact</a></li>
@@ -140,7 +140,7 @@
         </section>
         <section class="block-six">
             <aside>
-                <h4>06</h4>
+                <h4>05</h4>
             </aside>
             <p>Done!</p>
         </section>
@@ -149,7 +149,7 @@
 
     <button class="button-up">
         <span class="iconify" data-icon="mdi:chevron-up"></span>
-        <p>Take me up again!</p>
+        Take me up again!
     </button>
 
     <section class="floor"></section>
